<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.SchoolInfoActivity">

    <TextView
        android:id="@+id/school_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_key"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_school_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_school_key"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_key"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/share_button"
        android:text="@string/btn_share"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_school_key"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_school_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/school_address_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_address_city"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_school_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_school_address_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_school_address_city"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_address_city"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>